# pytest-recipes

./: .gitignore  README.md  pyproject.toml
tests/: mocker_module.py  test_mocker.py
