[tool.poetry]
name = "pytest-recipes"
version = "0.0.1"
description = "A collection of recipes for using pytest"
authors = ["Jonas Andersson <jonananas@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest-mock = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
